// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should convert a hypermap to a combined report 1`] = `
<CombinedReportRendererErrorHandler
  report={
    Object {
      "combined": true,
      "data": Object {
        "configuration": Object {
          "hiddenNodes": Object {
            "active": true,
            "keys": Array [
              "taskId3",
            ],
          },
        },
        "reports": Array [
          Object {
            "color": "#aec7e9",
            "id": "taskId1",
          },
          Object {
            "color": "#f68077",
            "id": "taskId2",
          },
        ],
        "visualization": "bar",
      },
      "reportType": "process",
      "result": Object {
        "data": Object {
          "taskId1": Object {
            "combined": false,
            "data": Object {
              "configuration": Object {
                "hiddenNodes": Object {
                  "active": true,
                  "keys": Array [
                    "taskId3",
                  ],
                },
              },
              "distributedBy": Object {
                "type": "userTask",
                "value": null,
              },
              "groupBy": Object {
                "type": "assignee",
              },
              "processDefinitionKey": "aKey",
              "processDefinitionVersion": "1",
              "view": Object {
                "entity": "userTask",
                "properties": Array [
                  "duration",
                ],
              },
              "visualization": "bar",
            },
            "id": "taskId1",
            "name": "Usertask 1",
            "reportType": "process",
            "result": Object {
              "data": Array [
                Object {
                  "key": "Anne",
                  "label": "Anne",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 8,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 1,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 65,
                    },
                  ],
                },
                Object {
                  "key": "Bernd",
                  "label": "Bernd",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 3,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 17,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 22,
                    },
                  ],
                },
                Object {
                  "key": "Chris",
                  "label": "Chris",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 1,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 0,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 73,
                    },
                  ],
                },
              ],
              "instanceCount": 1234,
              "measures": Array [
                Object {
                  "data": Array [
                    Object {
                      "key": "Anne",
                      "label": "Anne",
                      "value": 8,
                    },
                    Object {
                      "key": "Bernd",
                      "label": "Bernd",
                      "value": 3,
                    },
                    Object {
                      "key": "Chris",
                      "label": "Chris",
                      "value": 1,
                    },
                  ],
                  "property": "duration",
                  "type": "map",
                },
              ],
              "type": "map",
            },
          },
          "taskId2": Object {
            "combined": false,
            "data": Object {
              "configuration": Object {
                "hiddenNodes": Object {
                  "active": true,
                  "keys": Array [
                    "taskId3",
                  ],
                },
              },
              "distributedBy": Object {
                "type": "userTask",
                "value": null,
              },
              "groupBy": Object {
                "type": "assignee",
              },
              "processDefinitionKey": "aKey",
              "processDefinitionVersion": "1",
              "view": Object {
                "entity": "userTask",
                "properties": Array [
                  "duration",
                ],
              },
              "visualization": "bar",
            },
            "id": "taskId2",
            "name": "Usertask 2",
            "reportType": "process",
            "result": Object {
              "data": Array [
                Object {
                  "key": "Anne",
                  "label": "Anne",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 8,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 1,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 65,
                    },
                  ],
                },
                Object {
                  "key": "Bernd",
                  "label": "Bernd",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 3,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 17,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 22,
                    },
                  ],
                },
                Object {
                  "key": "Chris",
                  "label": "Chris",
                  "value": Array [
                    Object {
                      "key": "taskId1",
                      "label": "Usertask 1",
                      "value": 1,
                    },
                    Object {
                      "key": "taskId2",
                      "label": "Usertask 2",
                      "value": 0,
                    },
                    Object {
                      "key": "taskId3",
                      "label": "Usertask 3",
                      "value": 73,
                    },
                  ],
                },
              ],
              "instanceCount": 1234,
              "measures": Array [
                Object {
                  "data": Array [
                    Object {
                      "key": "Anne",
                      "label": "Anne",
                      "value": 1,
                    },
                    Object {
                      "key": "Bernd",
                      "label": "Bernd",
                      "value": 17,
                    },
                    Object {
                      "key": "Chris",
                      "label": "Chris",
                      "value": 0,
                    },
                  ],
                  "property": "duration",
                  "type": "map",
                },
              ],
              "type": "map",
            },
          },
        },
        "instanceCount": 1234,
        "measures": Array [
          Object {
            "data": Array [
              Object {
                "key": "Anne",
                "label": "Anne",
                "value": Array [
                  Object {
                    "key": "taskId1",
                    "label": "Usertask 1",
                    "value": 8,
                  },
                  Object {
                    "key": "taskId2",
                    "label": "Usertask 2",
                    "value": 1,
                  },
                  Object {
                    "key": "taskId3",
                    "label": "Usertask 3",
                    "value": 65,
                  },
                ],
              },
              Object {
                "key": "Bernd",
                "label": "Bernd",
                "value": Array [
                  Object {
                    "key": "taskId1",
                    "label": "Usertask 1",
                    "value": 3,
                  },
                  Object {
                    "key": "taskId2",
                    "label": "Usertask 2",
                    "value": 17,
                  },
                  Object {
                    "key": "taskId3",
                    "label": "Usertask 3",
                    "value": 22,
                  },
                ],
              },
              Object {
                "key": "Chris",
                "label": "Chris",
                "value": Array [
                  Object {
                    "key": "taskId1",
                    "label": "Usertask 1",
                    "value": 1,
                  },
                  Object {
                    "key": "taskId2",
                    "label": "Usertask 2",
                    "value": 0,
                  },
                  Object {
                    "key": "taskId3",
                    "label": "Usertask 3",
                    "value": 73,
                  },
                ],
              },
            ],
            "property": "duration",
          },
        ],
        "type": "hyperMap",
      },
    }
  }
/>
`;

exports[`should render single process report if report result is empty 1`] = `
<ProcessReportRenderer
  report={
    Object {
      "result": Object {
        "instanceCount": 0,
        "measures": Array [
          Object {
            "data": Array [],
          },
        ],
        "type": "hyperMap",
      },
    }
  }
/>
`;

exports[`should render single process report if there are no legend values 1`] = `
<ProcessReportRenderer
  report={
    Object {
      "result": Object {
        "instanceCount": 0,
        "measures": Array [
          Object {
            "data": Array [
              Object {
                "key": "a",
                "label": "A",
                "value": 0,
              },
            ],
          },
        ],
        "type": "hyperMap",
      },
    }
  }
/>
`;
